# sphinx-translation-button

./: README.md  _config.yml  index.html  internationalization-tutorial.md  poToMo.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-publish.yml  update-gh-pages.yml
book/en/_build/html/: search.html
book/nl/_build/.doctrees/: environment.pickle
book/nl/_build/html/: intro.html
book/nl/_build/html/_static/: refresh.js
en/_build/.doctrees/: environment.pickle
example-book/: _config.yml  conf.py  potomo.py
example-book/en/_build/html/: genindex.html
example-book/gettext/: intro.pot
example-book/gettext/.doctrees/: environment.pickle  intro.doctree
example-book/gettext/nl/: intro.po
example-book/locale/en/LC_MESSAGES/: intro.mo
example-book/locale/nl/LC_MESSAGES/: intro.mo
example-book/nl/_build/.doctrees/: intro.doctree
example-book/nl/_build/html/: search.html
nl/_build/.doctrees/: README.doctree  environment.pickle
nl/_build/html/: .buildinfo  README.html  genindex.html  objects.inv  searchindex.js
nl/_build/html/_static/: package_translation_button.js
release-package/: MANIFEST.in  README.md  pyproject.toml
release-package/src/sphinx-translation-button/: __init__.py
release-package/src/sphinx-translation-button/static/: package_translation_button.js
src/sphinx-translation-button/: __init__.py
src/sphinx-translation-button/static/: package_translation_button.js
test-package/: sphinx-translation-button.py
test-package/static/: package_translation_button.js  user_translation_button.js
(+12 files in other folders)
